works with j21, tests need fix